samples/_failures_safe/1761532043_5d1844_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3cb4a884.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_3cb4a884.c:146:30: error: expected ‘;’ at end of input
  146 |     if (n == 1) return matrix
      |                              ^
      |                              ;
./samples/SAFE/__tmp_3cb4a884.c:146:5: error: expected declaration or statement at end of input
  146 |     if (n == 1) return matrix
      |     ^~
